@@ -1,3 +1,9 @@
+/*
+  Copyright 2006 by Sean Luke and George Mason University
+  Licensed under the Academic Free License version 3.0
+  See the file "LICENSE" for more information
+*/
+
 package sim.portrayal.inspector;
 
 /** StableLocations are simple classes which provides set/get methods to Int2D, Double2D, etc. from SparseFields
