@@ -1,9 +1,8 @@
 /*
-  Copyright 2006 by Sean Luke
+  Copyright 2006 by Sean Luke and George Mason University
   Licensed under the Academic Free License version 3.0
   See the file "LICENSE" for more information
 */
-
 package sim.util.media.chart;
 
 import java.awt.*;
